Changelog
=========

What follows is a history of changes from release to release.  More detail
about the issues mentioned here can be found at the issue tracker, at::

    https://oodt.jpl.nasa.gov/jira/browse/CA


1.2.21 — TBD
------------

• CA-1498 - Disable vanity pages


1.2.20 — You're So Vain
-----------------------

• Upgrade steps to support vanity pages


1.2.19 — Pork and Beans
-----------------------

• CA-1421 - Updates to Science Data Tab
• CA-1436 - Collaborative Group Workspaces - Separate Projects and Protocols


1.2.18 — Panic Mode
-------------------

• CA-1423 - Collaborative groups should show documents in reverse
  chronological order


1.2.17 — Visuals
----------------

• Visualizations


1.2.16 — Release to NCI
-----------------------

• https://oodt.jpl.nasa.gov/jira/browse/CA-1324


1.2.15 — Various Upgrades
-------------------------

• Added Secretome, then removed Secretome.
• Set new Biomuta ingest path for biomarkers.
• No longer rely on python-ldap==2.3.13.


1.2.14 — Bug Fixes
------------------

• CA-1292
• CA-1300
• CA-1302
• CA-1303


1.2.13 — More Publishing!
-------------------------

• CA-759: Improve publication layout.


1.2.12 — You're Nothing Unless You Publish
------------------------------------------

• CA-179: upgrade eke.publications and hide its right-side portlets.


1.2.11 — I Had Some Chicken; Pass Me the FLOSS
----------------------------------------------

• First official release as free/libre/open source software.


1.2.10 — La Sigh
----------------

• CA-1237 - Stripped-down portal has ingest enabled; should be disabled


1.2.9 — Le Sigh
---------------

• CA-1236 - Stripped-down portal's Super User LDAP group has no Management
  permissions


1.2.8 — Direct Me To Your Leader
--------------------------------

• CA-1231 - Stripped down EDRN Portal doesn't have LDAP


1.2.7 — Quickie
---------------

• Upgrade eke.biomarker during edrnsite.policy upgrade